--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,9 @@
   color: white;
 }
 
+h1{
+  font-size: 2.5rem;
+}
 .converter-container {
   display: flex;
   justify-content: space-between;
@@ -17,7 +20,9 @@
   margin: 0 auto;
   gap: 20px;
 }
-
+span{
+  font-size: 0.7rem;
+}
 .code-editor {
   width: 40%;
   min-width: 300px;
